[package]
name = "post-sys"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.17"
dotenv = "0.15.0"
envy = "0.4.2"
once_cell = "1.17.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dependencies.sqlx]
version = "0.6.3"
features = ["postgres", "runtime-tokio-native-tls"]

[dependencies.tokio]
version = "1.28.0"
features = ["rt", "rt-multi-thread", "macros"]
